--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "webpack serve --mode=development",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
